# proxyrotator

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publishing.yaml  testing.yaml
docs/: conf.py  index.rst  logging.rst  methods.rst  proxyrotator.rst  sessions.rst
docs/saferequests/: methods.rst
docs/source/: conf.py  getting-started.rst  index.rst
docs/source/saferequests/: datamodels.rst  logging.rst  methods.rst  proxyrotation.rst  proxyrotator.rst  sessions.rst
proxyrotator/: __init__.py  rotator.py  session.py
saferequests/: __init__.py  logging.py  methods.py  proxyrotator.py  sessions.py
saferequests/proxyrotation/: repository.py  rotator.py
saferequests/proxyrotation/repository/: __init__.py  _asyncio.py  asyncio.py
tests/: test_datamodels.py  test_logging.py  test_proxyrotator.py  test_rotator.py  test_session.py  test_sessions.py
tests/proxyrotation/: test_rotator.py
