[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "saferequests"
version = "0.1.0"
description = "A drop-in replacement for requests with automatic proxy rotation for web scraping and anonymity"
authors = ["Federico Minutoli <fede97.minutoli@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["requests", "proxy-rotation", "web-scraping", "anonymity"]

[tool.poetry.dependencies]
python = "~3.10"
requests = "~2.31"
beautifulsoup4 = "~4.12"

[tool.poetry.dev-dependencies.testing]
pytest = "^7.4"
pytest-cov = "^4.1"
codecov = "^2.1"

[tool.poetry.dev-dependencies.docs]
sphinx = "^3.5"

[tool.black]
include = ".pyi?$"
exclude = """
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
"""
line-length = 88
target-version = ["py310"]

[tool.isort]
include_trailing_comma = true
lines_after_imports = 2
multi_line_output = 3
profile = "black"
py_version = 310

[tool.poetry.plugins."poetry.plugins.python"]
version = "^0.2.0"
